--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -4,12 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- HEADER -->
+    <header></header>
+
+
+    <!-- MAIN -->
+    <main class="main">
+        <section class="pokemon">
+            <div class="container pokemon__container text-center mt-5">
+                <img class="pokemon__heading-img" src="./images/pokemon_logo 1.png" alt="pokemons-logo">
+                <!-- <img src="./images/heart.png" alt="pokemon-heart"> -->
+
+                <form class="form d-flex">
+                    <select class="form-select pokemon__first-select" aria-label="Default select example">
+                        <option selected><p>Gross</p><img src="./images/chevron-down.svg" alt="chevron"></option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+
+                      <input class="form-control me-2 pokemon__first-select" type="search" placeholder="Search" aria-label="Search">
+
+                      <select class="form-select pokemon__first-select" aria-label="Default select example">
+                        <option selected><p>Aa-Zz</p><img src="./images/chevron-down.svg" alt="chevron"></option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+
+                      <button type="button" class="pokemon__first-select">Button</button>
+                </form>
 
 
 
+                <ul class="pokemon__list">
+                    <li>
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+
+
+
+    <!-- FOOTER -->
+    <footer></footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
