--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -42,26 +42,7 @@
 
 
 
-                <ul class="pokemon__list d-flex flex-wrap">
-                    <li class="pokemon__item">
-                        <div class="pokumon__img-section"><img src="..." class="card-img-top" alt="pokumon"></div>
-
-                            <div class="card-body pokemon__list-section">
-                                <img class="pokemon__list-line" src="./images/line.png" alt="black line">
-                                <div class="d-flex">
-                                    <h5 class="card-title">Card title</h5>
-                                    <img src="./images/heart.png" alt="pokemon-heart" width="30" height="30"></div>
-
-                              <p class="card-text pokumon__list-desc">Grass, Poison</p>
-                              <div class="pokumon__item-section d-flex">
-                                  <p class="pokumon__weight">6.9 kg</p>
-                                  <p class="pokumon__age pokumon__weight">99 age</p>
-                              </div>
-                            </div>
-                    </li>
-
-
-                </ul>
+                <ul class="pokemon__list d-flex flex-wrap"></ul>
             </div>
         </section>
     </main>
@@ -73,7 +54,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/pokemons.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
